--- a/public/index.hbs
+++ b/public/index.hbs
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>{{htmlWebpackPlugin.options.title}}</title>
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
-  </head>
 
-  <body>
-    <div id="root"></div>
-  </body>
+<head>
+  <meta charset="utf-8">
+  <title>{{htmlWebpackPlugin.options.title}}</title>
+  <link rel="shortcut icon" href="{{PUBLIC_URL}}/favicon.png">
+  <link href="https://fonts.googleapis.com/css?family=Rock+Salt|Open+Sans:400,700" rel="stylesheet">
+</head>
+
+<body>
+  <div id="root"></div>
+</body>
+
 </html>
