--- a/src/components/Challenge/styles.css
+++ b/src/components/Challenge/styles.css
@@ -7,7 +7,7 @@
   font-family: 'Rock Salt', cursive;
   font-size: 50px;
   line-height: 80px;
-  margin: 0 8px;
+  margin: 8px 8px 0;
 }
 
 .challenge p {
